# cpptorch

./: .gitignore  README.md
bert/cc_bert/: CMakeLists.txt  README.md  build.sh  model.cc
bert/tf_bert/: create_pretraining_data.py  run_pretraining.sh  run_squad.py  run_squad.sh
bert/th_bert/: atec_data.py  convert_tf_checkpoint_to_pytorch.py  convert_tf_to_th.sh  dssm.py  extract_features.py  logger.py  modeling.py  run.sh  run_classifier.py  run_classifier.sh  run_squad.sh
corpus/: filesystem.h  main.cc  util.cc  util.h
corpus/ebooks/: README.md  books.sql  main.py
corpus/zhwiki/: README.md  get_zhwiki.sh  merge_files.py
example-app/: CMakeLists.txt  example-app.cc
gbdt/: baseline.py  boston.test  boston.train  gbdt.cc  gbdt.h  main.cc  test.txt  train.txt  tree.cc  tree.h
lac/: READEME.md  baidu_lac_infer.py  convert_paddle_to_numpy.py  crf.py  infer.py  network.py  test_np_vars.py  vocab_count.py
lac/th/: convert_paddle_to_numpy.py  infer.py  network.py
lr/: logistic_regression.cpp  logistic_regression.h  test.txt  train.txt
minitext/: CMakeLists.txt  app.cc  args.h  dictionary.cc  dictionary.h  make.sh
mnist/: CMakeLists.txt  README.md  mnist.cc
rpc/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
sentencepiece/: README.md
sentencepiece/src/: sentencepiece_trainer.cc  spm_train_main.cc  trainer_factory.cc
transformer/: copy_task.py  main.py  model.py  test.py  translate.py
unicode/: 1.txt  CMakeLists.txt  main.cc  string_util.cc  string_util.h
